[gd_scene load_steps=10 format=2]

[ext_resource path="res://title/background.png" type="Texture" id=1]
[ext_resource path="res://title/name.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/menu.mp3" type="AudioStream" id=3]
[ext_resource path="res://title/but_play1.png" type="Texture" id=4]
[ext_resource path="res://title/but_ext3.png" type="Texture" id=5]
[ext_resource path="res://title/but_play3.png" type="Texture" id=6]
[ext_resource path="res://sounds/button.mp3" type="AudioStream" id=7]
[ext_resource path="res://title/but_ext1.png" type="Texture" id=8]
[ext_resource path="res://title/title.gd" type="Script" id=9]

[node name="Title" type="Node"]
script = ExtResource( 9 )

[node name="background" type="TextureRect" parent="."]
margin_left = -1.26035
margin_right = 3998.74
margin_bottom = 2250.0
rect_scale = Vector2( 0.256, 0.266 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="MarginContainer" parent="."]
margin_left = 314.0
margin_top = 156.0
margin_right = 722.0
margin_bottom = 369.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" parent="name" instance=ExtResource( 2 )]
margin_right = 408.0
margin_bottom = 213.0

[node name="but_play" type="TouchScreenButton" parent="."]
position = Vector2( 334, 326 )
scale = Vector2( 0.378413, 0.305015 )
normal = ExtResource( 4 )
pressed = ExtResource( 6 )

[node name="but_ext" type="TouchScreenButton" parent="."]
position = Vector2( 333, 456 )
scale = Vector2( 0.374242, 0.305015 )
normal = ExtResource( 8 )
pressed = ExtResource( 5 )

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="sfx" type="Node" parent="." groups=["sfx"]]

[node name="button" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 7 )
volume_db = -2.0

[connection signal="pressed" from="but_play" to="." method="_on_but_play_pressed"]
[connection signal="released" from="but_play" to="." method="_on_but_play_released"]
[connection signal="pressed" from="but_ext" to="." method="_on_but_ext_pressed"]
[connection signal="released" from="but_ext" to="." method="_on_but_ext_released"]
